<resources>
    <string name="app_name">QRCodeReader</string>
    <string name="action_settings">Settings</string>
    <string name="meu_contato">Meu Contato</string>
    <string name="meu_contato_qr">Meu Contato QR</string>
    <string name="contato_qr">Contato QR</string>
    <string name="importar_contato">Importar Contato</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="e_mail">E-mail</string>
    <string name="facebook">Facebook</string>
    <string name="salvar">Salvar</string>
</resources>
