<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jhonatangarcia.qrcodereader.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contato_qr"
        android:id="@+id/menuLb"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meu_contato"
        android:id="@+id/menuBtMeuContato"
        android:layout_marginTop="100dp"
        android:onClick="menuMeuContato"
        android:layout_below="@+id/menuLb"
        android:layout_alignLeft="@+id/menubtImportarContato"
        android:layout_alignStart="@+id/menubtImportarContato"
        android:layout_alignRight="@+id/menubtImportarContato"
        android:layout_alignEnd="@+id/menubtImportarContato"
        android:clickable="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importar_contato"
        android:id="@+id/menubtImportarContato"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/menuBtMeuContato"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meu_contato_qr"
        android:id="@+id/menubtMeuContatoQR"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/menubtImportarContato"
        android:layout_alignLeft="@+id/menubtImportarContato"
        android:layout_alignStart="@+id/menubtImportarContato"
        android:layout_alignRight="@+id/menubtImportarContato"
        android:layout_alignEnd="@+id/menubtImportarContato" />

</RelativeLayout>
